log
Thu 09 May 2024 09:15:24 PM UTC: 
 tests:  1|8
total_score: 0/70
825f829
Thu 09 May 2024 09:32:20 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
b82de08
Thu 09 May 2024 09:34:11 PM UTC: 
 treemap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:52:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   52 |     TreeNode * parent = NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
2d61d09
Thu 09 May 2024 09:35:32 PM UTC: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  5|7
total_score: 5/70
813e8ec
Thu 09 May 2024 09:37:37 PM UTC: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  12|6
total_score: 15/70
6840cd1
Thu 09 May 2024 09:38:09 PM UTC: 
 treemap.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  12|6
total_score: 15/70
228bd5e
Thu 09 May 2024 09:41:41 PM UTC: 
 treemap.c | 42 +++++-------------------------------------
 1 file changed, 5 insertions(+), 37 deletions(-)
 tests:  13|5
total_score: 15/70
7ce3967
Thu 09 May 2024 09:43:02 PM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 20/70
e98606b
